<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/beerflight"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.uw.tacoma.jwolf059.pubcrawler.login.LoginActivity"
        tools:showIn="@layout/activity_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    <EditText
        android:id="@+id/userid_edit"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/com_facebook_button_login_silver_background"
        android:ems="10"
        android:hint="Enter Username"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/userid_edit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="Sign in"
                android:textColor="#F7F7F5" />


            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:onClick="register"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="Register"
                android:layout_marginTop="28dp"
                android:textColor="#F7F7F5" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp" />


        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/com_facebook_button_login_silver_background"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:layout_marginBottom="225dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>